production-package/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pinnacle
  labels:
    app: pinnacle-academic
